--- a/termos.html
+++ b/termos.html
@@ -41,11 +41,10 @@
       <label for="acceptTerms">Eu li e concordo com os termos de uso e a política de privacidade</label>
       <form class="pol-form" action="index.html">
 
-            <button type="submit">Concordo</button>
+            <button type="submit"><a href="index.html">Concordo</a></button>
   
     </div>
   </div>
 
-  <script src="script.js"></script>
 </body>
 </html>
